k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: packit-backend-service

spec:
  selector:
    app: packit-backend

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

  type: NodePort
